<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scan_bg"
    tools:context=".SignUp">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="@dimen/default_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.763">

        <EditText
            android:id="@+id/edit_text_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:nextFocusDown="@id/edit_text_pwd"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint" />


        <EditText
            android:id="@+id/edit_text_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:nextFocusDown="@id/edit_text_height"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint" />


        <EditText
            android:id="@+id/edit_text_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/height"
            android:inputType="numberDecimal"
            android:nextFocusDown="@id/edit_text_weight"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint" />

        <EditText
            android:id="@+id/edit_text_weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:inputType="numberDecimal"
            android:maxLength="10"
            android:nextFocusDown="@id/edit_text_age"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint" />

        <EditText
            android:id="@+id/edit_text_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Age"
            android:inputType="number"
            android:maxLength="10"
            android:nextFocusDown="@id/edit_text_gender"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint" />

        <EditText
            android:id="@+id/edit_text_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Gender"
            android:inputType="text"
            android:maxLength="10"
            android:nextFocusDown="@id/button_register"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint" />


        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_button_register"
            android:onClick="register"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="#000000" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Already a user: SIGN IN  "
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.05"
        android:textColor="#FAFAD2"
        android:onClick="tosignin"/>

</androidx.constraintlayout.widget.ConstraintLayout>